# ChemManager

./: .gitignore  anaconda-project.yml  environment.yml  pyproject.toml  requirements.txt
.atom/: config.cson
chemman/: chem_dump.json  install_data.py  manage.py  requirements.txt  serve-dev.sh  serve-lan.sh  standalone.py
chemman/chemman/: settings.py  urls.py  wsgi.py
chemman/cmrpc/: apps.py  middlewares.py  mixins.py  models.py  proxy.py  urls.py  views.py
chemman/cmrpc/migrations/: 0001_initial.py  0002_alter_rpcsession_id.py
chemman/coffeescript/: coffee2js.py  core.coffee
chemman/core/: __init__.py  admin.py  apps.py  fields.py  filters.py  forms.py  jinja_extensions.py  json_utils.py  manage_forms.py  ozone_support.py  processors.py  serializers.py  signal_handlers.py  system_info.py  tasks.py  tests.py  units.py  urls.py  utils.py
chemman/core/migrations/: 0001_initial.py  0002_auto_20161231_0735.py  0003_auto_20170206_1051.py  0004_notification.py  0005_auto_20170210_0914.py  0006_auto_20170213_1154.py  0007_auto_20170724_0821.py  0008_auto_20200124_1320.py  0009_auto_20210930_1840.py  0010_auto_20211013_1202.py  0011_storedpackage_delivered_for.py  0012_alter_barcode_id_alter_bookmark_id_alter_building_id_and_more.py
chemman/core/models/: __init__.py  base.py  chems.py  handbook.py  safety.py  storage.py
chemman/core/views/: __init__.py  api.py  chems.py  handbook.py  helpers.py  management.py  orders.py  pdf.py  storage.py
chemman/data/: all_cleaned.json  bbz_testdata.json  lgk_dump.json  pictograms.json  safety_dump.json
chemman/floor_map/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
chemman/floor_map/migrations/: 0001_initial.py  0002_auto_20170103_1322.py  (+2 more)
chemman/msds_collector/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
chemman/operating_instruction_creator/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
clients/delivery/: delivery_main.ui
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
images/: GHS07.pdn  GHS08.pdn
legal/: Anzahl_GHS_Piktogramme.txt
misc/: chemman.service  chemman_tasks.service  cm_daily.service  cm_daily.timer
presentations/: general.html  index.html
presentations/css/: reveal-override.css
presentations/general/: concepts.html  tech.html  usage.html
(+143 files in other folders)
