[tool.poetry]
name = "ChemManager"
version = "0.1.0"
description = "Open chemistry inventory manager."
authors = ["Whitie <weimann.th@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
Django = "2.2.28"
CherryPy = "18.5.0"
cryptography = "2.7"
django-auth-ldap = {version = "2.2.0", optional = true}
django-background-tasks = "1.2.5"
django-contrib-comments = "1.9.1"
django-jinja = "2.4.1"
django-spaghetti-and-meatballs = "0.2.2"
Pillow = "7.0.0"
psycopg2 = {version = "2.8.2", optional = true}
PubChemPy = "1.0.4"
Pygments = "2.4.2"
python-ldap = {version = "3.3.1", optional = true}
python3-ldap = {version = "0.9.8.4", optional = true}
qrcode = "6.1"
requests = "2.22.0"
Sphinx = "2.1.0"
Babel = "2.7.0"
openpyxl = "2.6.4"
weasyprint = "51"
djangorestframework = "^3.12.4"

[tool.poetry.extras]
ldap = ["python-ldap", "python3-ldap", "django-auth-ldap"]
pgsql = ["psycopg2"]

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
