[tool.poetry]
name = "ChemManager"
version = "0.1.0"
description = "Open chemistry inventory manager."
authors = ["Whitie <weimann.th@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
django = "^4.1.4"
cryptography = "^38.0.4"
django-auth-ldap = {version = "^4.1.0", optional = true}
django-contrib-comments = "^2.2.0"
django-jinja = "^2.10.2"
django-spaghetti-and-meatballs = "^0.4.2"
pillow = "^9.3.0"
python-ldap = {version = "^3.4.3", optional = true}
python3-ldap = {version = "^0.9.8.4", optional = true}
pubchempy = "^1.0.4"
pygments = "^2.13.0"
qrcode = "^7.3.1"
requests = "^2.28.1"
sphinx = "^5.3.0"
babel = "^2.11.0"
openpyxl = "^3.0.10"
weasyprint = "^57.1"
djangorestframework = "^3.14.0"
psycopg2 = {version = "^2.9.5", optional = true}
django-q = "^1.3.9"
gunicorn = {version = "^20.1.0", optional = true}
setuptools = "^65.6.3"


[tool.poetry.extras]
ldap = ["python-ldap", "python3-ldap", "django-auth-ldap"]
pgsql = ["psycopg2"]
deploy = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
